# Vega42

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VegaApplication.cpp  VegaApplication.h  build.bat  build.sh  install.bat  install.sh  main.cpp
.github/workflows/: android_build.yml  linux_dev_build.yml  linux_release.yml  macos_dev_build.yml  macos_release.yml  unified_build.yml  windows_dev_build.yml  windows_release.yml
app/: VegaApplication.h  main.cpp
app/platform/android/: gradle.properties  local.properties
app/platform/android/app/: build.gradle
app/platform/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
